Refactor for immutability and readability: add `final` where applicable, replace redundant constructs, simplify error propagation, and improve code consistency across `Rule` implementations and utility classes.